--- a/application/templates/static/homepage.mustache
+++ b/application/templates/static/homepage.mustache
@@ -1,3 +1,78 @@
-<p>
-    Hello world! You've got vtemplate up and running just wonderfully.
-</p>
+<header>
+    <h1>
+        <em>Weight</em>Race
+    </h1>
+</header>
+<section id="register">
+    <h2>
+        Lose weight.<br>
+        Compete with friends.
+    </h2>
+    <form>
+        <label for="competition_name">Name your challenge now:</label>
+        <input type=="text">
+        <h3>
+            Prepare your contestants (up to 4)
+        </h3>
+        {{#racers}}
+        <fieldset>
+            <legend>
+                Racer {{n}}
+                <span>{{tagline}}</span>
+            </legend>
+            <label for="racer{{n}}_name">Name:</label>
+            <input type="text" name="racer{{n}}_name">
+            <label for="racer{{n}}_weight">Current weight:</label>
+            <input type="text" name="racer{{n}}_weight">
+            <label for="racer{{n}}_height">Height:</label>
+            <input type="text" name="racer{{n}}_height">
+            <label for="racer{{n}}_gender">Gender:</label>
+            <select name="racer{{n}}_gender">
+                <option value="1">Male</option>
+                <option value="0">Female</option>
+            </select>
+            <label for="racer{{n}}_ethnicity">Ethnicity:</label>
+            <select name="racer{{n}}_ethnicity">
+                <option value="asian">Asian</option>
+                <option value="black">Black</option>
+                <option value="hispanic">Hispanic</option>
+                <option value="white">White</option>
+            </select>
+            <label for="racer{{n}}_goal_weight">Goal weight:</label>
+            <input type="text" name="racer{{n}}_goal_weight">
+            <label for="racer{{n}}_email">Email:</label>
+            <input type="text" name="racer{{n}}_email">
+        </fieldset>
+        {{/racers}}
+        <h3>
+            Choose a start and end date:
+        </h3>
+        <label for="start_date">Start date:</label>
+        <input type="text" name="start_date">
+        <span>...until...</span>
+        <label for="end_date">End date:</label>
+        <input type="text" name="end_date">
+        <input type="submit" name="submit" value="Ready. Set. Go.">
+    </form>
+</section>
+<section id="top_losers">
+    <h1>
+        Top losers this week
+    </h1>
+    <ul>
+    {{#losers}}
+        <li>
+            <h2>
+                {{name}}
+            </h2>
+            Awards will go here.
+        </li>
+    {{/losers}}
+    </ul>
+</section>
+<footer>
+    <p>
+        Copyright &copy; 2013 WeightRace.com<br>
+        Designed and built by <a href="http://thinkmoult.com">Dion Moult</a>
+    </p>
+</footer>
