Add continue button

--- a/application/templates/static/homepage.mustache
+++ b/application/templates/static/homepage.mustache
@@ -11,6 +11,7 @@
     <form>
         <label for="competition_name">Name your challenge now:</label>
         <input type=="text">
+        <button type="button">Continue</button>
         <h3>
             Prepare your contestants (up to 4)
         </h3>
