--- a/css/site.styl
+++ b/css/site.styl
@@ -1,3 +1,294 @@
 /**
  * Site specific CSS
  */
+html
+    background-color #fff
+    font-family 'Snippet', sans-serif
+    font-weight 300
+    body
+        width 978px
+        margin-left auto
+        margin-right auto
+        input
+            font-family 'Snippet', sans-serif
+        select
+            font-family 'Snippet', sans-serif
+
+header
+    background-image url('../images/weightrace.png')
+    height 458px
+    h1
+        margin-top 0px
+        color #fff
+        font-weight normal
+        font-size 18px
+        text-transform lowercase
+        padding 10px
+        em
+            font-style normal
+            font-weight bold
+section#register
+    text-align center
+    h2
+        text-align center
+        color #fff
+        position relative
+        margin-top -175px
+        line-height 40px
+        font-size 30px
+        font-weight normal
+    form
+        label:first-child
+            font-size 30px
+            font-weight normal
+            color #fff
+            display block
+            text-align center
+        input:nth-child(2)
+            position relative
+            width 370px
+            height 37px
+            -webkit-border-radius: 10px;
+            border-radius: 10px;
+            border 1px solid #fff
+            background: #cccccc; /* Old browsers */
+            background: -moz-linear-gradient(top,  #cccccc 0%, #ffffff 40%); /* FF3.6+ */
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cccccc), color-stop(40%,#ffffff)); /* Chrome,Safari4+ */
+            background: -webkit-linear-gradient(top,  #cccccc 0%,#ffffff 40%); /* Chrome10+,Safari5.1+ */
+            background: -o-linear-gradient(top,  #cccccc 0%,#ffffff 40%); /* Opera 11.10+ */
+            background: -ms-linear-gradient(top,  #cccccc 0%,#ffffff 40%); /* IE10+ */
+            background: linear-gradient(to bottom,  #cccccc 0%,#ffffff 40%); /* W3C */
+            -webkit-box-shadow:  0px 0px 1px 1px rgba(220, 220, 220, 1), inset 0px -1px 5px 1px rgba(230, 230, 230, 1);
+            box-shadow:  0px 0px 1px 1px rgba(220, 220, 220, 1), inset 0px -1px 5px 1px rgba(230, 230, 230, 1);
+            line-height 50px
+            font-size 25px
+            color #bbb
+            padding 10px
+        h3
+            text-align center
+            color #777
+            font-size 23px
+            font-weight normal
+        h3:nth-of-type(2)
+            clear both
+            padding-top 20px
+        fieldset
+            width 222px
+            margin-left 30px
+            float left
+            background-color #e3e3e3
+            legend
+                background-color rgba(247, 247, 247, 0.9)
+                text-transform uppercase
+                text-align center
+                height 50px
+                display block
+                margin-left 21px
+                width 180px
+                -webkit-box-shadow:  0px 01px 0px 5px rgba(0, 0, 0, .2);
+                box-shadow:  0px 01px 0px 5px rgba(0, 0, 0, .2);
+                font-size 18px
+                line-height 36px
+                -webkit-border-radius: 3px;
+                border-radius: 3px;
+                span
+                    line-height 0px
+                    display block
+                    font-size 12px
+            label
+                display none
+            input
+                background #ebebeb
+                width 210px
+                border none
+                padding 0px
+                height 30px
+                font-size 16px
+                padding 6px
+            input:nth-of-type(odd)
+                background #f0f0f0
+            input:first-of-type
+                margin-top 10px
+            .select
+                display block
+                overflow hidden
+                background #ebebeb
+            select
+                font-size 16px
+                padding 6px
+                background transparent
+                width 120%
+                height 40px
+                border none
+        fieldset:nth-of-type(1)
+            legend
+                color #db1900
+                background-image url('../images/racer1.png')
+                background-position top right
+                background-repeat no-repeat
+            input:first-of-type
+                border-top 3px solid #df7e71
+                color #db1900
+            input:last-of-type
+                color #db1900
+                border-bottom 3px solid #df7e71
+            input:nth-of-type(4)
+                background-color #e2cfcc
+        fieldset:nth-of-type(2)
+            legend
+                color #036f88
+                background-image url('../images/racer2.png')
+                background-position top right
+                background-repeat no-repeat
+            input:first-of-type
+                border-top 3px solid #81bbc9
+                color #036f88
+            input:last-of-type
+                color #036f88
+                border-bottom 3px solid #81bbc9
+            input:nth-of-type(4)
+                background-color #cdd7da
+        fieldset:nth-of-type(3)
+            legend
+                color #ff7f00
+                background-image url('../images/racer3.png')
+                background-position top right
+                background-repeat no-repeat
+            input:first-of-type
+                border-top 3px solid #f2aa63
+                color #ff7f00
+            input:last-of-type
+                color #ff7f00
+                border-bottom 3px solid #f2aa63
+            input:nth-of-type(4)
+                background-color #e7d3bf
+        fieldset:nth-of-type(4)
+            legend
+                color #00a42b
+                background-image url('../images/racer4.png')
+                background-position top right
+                background-repeat no-repeat
+            input:first-of-type
+                border-top 3px solid #76c48a
+                color #00a42b
+            input:last-of-type
+                color #00a42b
+                border-bottom 3px solid #76c48a
+            input:nth-of-type(4)
+                background-color #ccdcd0
+        fieldset:first-of-type
+            margin-left 0px
+        label[for=start_date]
+            display none
+        label[for=end_date]
+            display none
+        input.datepicker
+            width 170px
+            height 30px
+            -webkit-border-radius: 10px;
+            border-radius: 10px;
+            border 1px solid #fff
+            background: #dddddd; /* Old browsers */
+            background-image: -moz-linear-gradient(top,  #dddddd 0%, #ffffff 80%); /* FF3.6+ */
+            background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dddddd), color-stop(80%,#ffffff)); /* Chrome,Safari4+ */
+            background-image: -webkit-linear-gradient(top,  #dddddd 0%,#ffffff 80%); /* Chrome10+,Safari5.1+ */
+            background-image: -o-linear-gradient(top,  #dddddd 0%,#ffffff 80%); /* Opera 11.10+ */
+            background-image: -ms-linear-gradient(top,  #dddddd 0%,#ffffff 80%); /* IE10+ */
+            background-image: linear-gradient(to bottom,  #dddddd 0%,#ffffff 80%); /* W3C */
+            -webkit-box-shadow:  0px 0px 1px 1px rgba(220, 220, 220, 1), inset 0px -1px 5px 1px rgba(230, 230, 230, 1);
+            box-shadow:  0px 0px 1px 1px rgba(220, 220, 220, 1), inset 0px -1px 5px 1px rgba(230, 230, 230, 1);
+            line-height 50px
+            font-size 25px
+            color #bbb
+            padding 10px
+        input.datepicker+span:before
+            margin 0px
+            padding 0px
+            display block
+            margin-top -65px
+            margin-left 385px
+            position absolute
+            content ''
+            width 32px
+            height 32px
+            background-repeat no-repeat
+            background-image url('../images/calendar.png')
+        input.datepicker+span:after
+            margin 0px
+            padding 0px
+            display block
+            margin-top -65px
+            margin-left 702px
+            position absolute
+            content ''
+            width 32px
+            height 32px
+            background-repeat no-repeat
+            background-image url('../images/calendar.png')
+        input.datepicker+span
+            margin 20px
+            color #777
+            font-size 20px
+        input[type=submit]
+            margin-left auto
+            margin-right auto
+            margin-top 30px
+            display block
+            width 390px
+            height 60px
+            color #fff
+            font-size 28px
+            background: #25cb51; /* Old browsers */
+            background: -moz-linear-gradient(top,  #25cb51 0%, #00a42b 100%); /* FF3.6+ */
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#25cb51), color-stop(100%,#00a42b)); /* Chrome,Safari4+ */
+            background: -webkit-linear-gradient(top,  #25cb51 0%,#00a42b 100%); /* Chrome10+,Safari5.1+ */
+            background: -o-linear-gradient(top,  #25cb51 0%,#00a42b 100%); /* Opera 11.10+ */
+            background: -ms-linear-gradient(top,  #25cb51 0%,#00a42b 100%); /* IE10+ */
+            background: linear-gradient(to bottom,  #25cb51 0%,#00a42b 100%); /* W3C */
+            border 1px solid #fff
+            -webkit-border-radius: 10px;
+            border-radius: 10px;
+            -webkit-box-shadow:  0px 01px 0px 5px rgba(0, 0, 0, .3);
+            box-shadow:  0px 01px 0px 5px rgba(0, 0, 0, .3);
+            z-index 100
+            position relative
+section#top_losers
+    background-color #eeeeee
+    margin-top -50px
+    z-index 10
+    position relative
+    text-align center
+    overflow hidden
+    padding-bottom 30px
+    h1
+        padding-top 60px
+        color #777
+        font-size 23px
+        font-weight normal
+        background-color #eee
+        display inline-block
+        position relative
+        padding-left 30px
+        padding-right 30px
+        z-index 100
+    ul
+        border-top 1px solid #aaa
+        position relative
+        margin-top -30px
+        z-index 10
+        list-style-type none
+        padding 0px
+        li
+            width 222px
+            background-color #ccc
+            margin 0px
+            margin-top 30px
+            padding 0px
+            margin-left 30px
+            float left
+            color #999
+        li:nth-of-type(4n+1)
+            margin-left 0px
+footer
+    font-size 10px
+    text-align center
