Fix cross browser issues and convert to fluid layout

--- a/application/templates/static/homepage.mustache
+++ b/application/templates/static/homepage.mustache
@@ -4,6 +4,7 @@
     <h1>
         <em>Weight</em>Race
     </h1>
+    <img src="{{baseurl}}images/graph.png" alt="WeightRace Graph">
 </header>
 <section id="register">
     <h2>
