--- a/css/main.css
+++ b/css/main.css
@@ -8,17 +8,16 @@ fieldset{border:0;margin:0;padding:0}
 textarea{resize:vertical}
 .chromeframe{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0}
 html{background-color:#fff;font-family:'Snippet',sans-serif;font-weight:300;}
-html body{width:978px;margin-left:auto;margin-right:auto;}
 html body input{font-family:'Snippet',sans-serif}
 html body select{font-family:'Snippet',sans-serif}
-header{background-image:url("../images/weightrace.png");height:458px;}
-header h1{margin-top:0;color:#fff;font-weight:normal;font-size:18px;text-transform:lowercase;padding:10px;}
+header{text-align:center;width:100%;height:458px;background:url("../images/weightrace.png");-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;}
+header h1{margin-top:0;color:#555;font-weight:normal;font-size:18px;text-transform:lowercase;padding:10px;}
 header h1 em{font-style:normal;font-weight:bold}
-section#register{text-align:center;}
-section#register h2{text-align:center;color:#fff;position:relative;margin-top:-175px;line-height:40px;font-size:30px;font-weight:normal}
+section#register{width:978px;margin-left:auto;margin-right:auto;text-align:center;}
+section#register h2{text-shadow:0 0 50px #000;filter:dropshadow(#000,0,0);text-align:center;color:#fff;position:relative;margin-top:-175px;line-height:40px;font-size:30px;font-weight:normal}
 section#register form label:first-child{font-size:30px;font-weight:normal;color:#fff;display:block;text-align:center}
 section#register form input:nth-child(2){position:relative;width:370px;height:37px;-webkit-border-radius:10px;border-radius:10px;border:1px solid #fff;background:#ccc;background:-moz-linear-gradient(top,#ccc 0%,#fff 40%);background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#ccc),color-stop(40%,#fff));background:-webkit-linear-gradient(top,#ccc 0%,#fff 40%);background:-o-linear-gradient(top,#ccc 0%,#fff 40%);background:-ms-linear-gradient(top,#ccc 0%,#fff 40%);background:linear-gradient(to bottom,#ccc 0%,#fff 40%);-webkit-box-shadow:0 0 1px 1px #dcdcdc,inset 0 -1px 5px 1px #e6e6e6;box-shadow:0 0 1px 1px #dcdcdc,inset 0 -1px 5px 1px #e6e6e6;line-height:50px;font-size:25px;color:#bbb;padding:10px}
-section#register form h3{text-align:center;color:#777;font-size:23px;font-weight:normal}
+section#register form h3{clear:both;text-align:center;color:#777;font-size:23px;font-weight:normal}
 section#register form h3:nth-of-type(2){clear:both;padding-top:20px}
 section#register form fieldset{width:222px;margin-left:30px;float:left;background-color:#e3e3e3;}
 section#register form fieldset legend{background-color:rgba(247,247,247,0.9);text-transform:uppercase;text-align:center;height:50px;display:block;margin-left:21px;width:180px;-webkit-box-shadow:0 1px 0 5px rgba(0,0,0,0.2);box-shadow:0 1px 0 5px rgba(0,0,0,0.2);font-size:18px;line-height:36px;-webkit-border-radius:3px;border-radius:3px;}
@@ -49,16 +48,16 @@ section#register form fieldset:first-of-type{margin-left:0}
 section#register form label[for=start_date]{display:none}
 section#register form label[for=end_date]{display:none}
 section#register form input.datepicker{width:170px;height:30px;-webkit-border-radius:10px;border-radius:10px;border:1px solid #fff;background:#ddd;background-image:-moz-linear-gradient(top,#ddd 0%,#fff 80%);background-image:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#ddd),color-stop(80%,#fff));background-image:-webkit-linear-gradient(top,#ddd 0%,#fff 80%);background-image:-o-linear-gradient(top,#ddd 0%,#fff 80%);background-image:-ms-linear-gradient(top,#ddd 0%,#fff 80%);background-image:linear-gradient(to bottom,#ddd 0%,#fff 80%);-webkit-box-shadow:0 0 1px 1px #dcdcdc,inset 0 -1px 5px 1px #e6e6e6;box-shadow:0 0 1px 1px #dcdcdc,inset 0 -1px 5px 1px #e6e6e6;line-height:50px;font-size:25px;color:#bbb;padding:10px}
-section#register form input.datepicker+span:before{margin:0;padding:0;display:block;margin-top:-65px;margin-left:385px;position:absolute;content:'';width:32px;height:32px;background-repeat:no-repeat;background-image:url("../images/calendar.png")}
-section#register form input.datepicker+span:after{margin:0;padding:0;display:block;margin-top:-65px;margin-left:702px;position:absolute;content:'';width:32px;height:32px;background-repeat:no-repeat;background-image:url("../images/calendar.png")}
+section#register form input.datepicker+span:before{margin:0;margin-left:-32px;left:-33px;top:8px;padding:0;display:inline-block;position:relative;content:'';width:32px;height:32px;background-repeat:no-repeat;background-image:url("../images/calendar.png")}
+section#register form input.datepicker+span:after{margin:0;padding:0;top:8px;left:208px;margin-left:-32px;display:inline-block;position:relative;content:'';width:32px;height:32px;background-repeat:no-repeat;background-image:url("../images/calendar.png")}
 section#register form input.datepicker+span{margin:20px;color:#777;font-size:20px}
 section#register form input[type=submit]{margin-left:auto;margin-right:auto;margin-top:30px;display:block;width:390px;height:60px;color:#fff;font-size:28px;background:#25cb51;background:-moz-linear-gradient(top,#25cb51 0%,#00a42b 100%);background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#25cb51),color-stop(100%,#00a42b));background:-webkit-linear-gradient(top,#25cb51 0%,#00a42b 100%);background:-o-linear-gradient(top,#25cb51 0%,#00a42b 100%);background:-ms-linear-gradient(top,#25cb51 0%,#00a42b 100%);background:linear-gradient(to bottom,#25cb51 0%,#00a42b 100%);border:1px solid #fff;-webkit-border-radius:10px;border-radius:10px;-webkit-box-shadow:0 1px 0 5px rgba(0,0,0,0.3);box-shadow:0 1px 0 5px rgba(0,0,0,0.3);z-index:100;position:relative}
-section#top_losers{background-color:#eee;margin-top:-50px;z-index:10;position:relative;text-align:center;overflow:hidden;padding-bottom:30px;}
-section#top_losers h1{padding-top:60px;color:#777;font-size:23px;font-weight:normal;background-color:#eee;display:inline-block;position:relative;padding-left:30px;padding-right:30px;z-index:100}
-section#top_losers ul{border-top:1px solid #aaa;position:relative;margin-top:-30px;z-index:10;list-style-type:none;padding:0;}
-section#top_losers ul li{width:222px;background-color:#ccc;margin:0;margin-top:30px;padding:0;margin-left:30px;float:left;color:#999}
-section#top_losers ul li:nth-of-type(4n+1){margin-left:0}
-footer{font-size:10px;text-align:center}
+section#top_losers{background-color:#eee;background-image:url("../images/subtle_grey.png");margin-top:-30px;z-index:10;position:relative;text-align:center;overflow:hidden;padding-bottom:30px;}
+section#top_losers h1{background-image:url("../images/subtle_grey.png");padding-top:60px;color:#777;font-size:23px;font-weight:normal;background-color:#eee;display:inline-block;position:relative;padding-left:30px;padding-right:30px;z-index:100}
+section#top_losers ul{margin-left:auto;margin-right:auto;border-top:1px solid #aaa;position:relative;margin-top:-30px;display:inline-block;z-index:10;list-style-type:none;padding:0;}
+section#top_losers ul li{width:222px;background-color:#ccc;margin:0;margin-top:30px;padding:0;margin-left:15px;margin-right:15px;display:inline-block;color:#999}
+footer{font-size:10px;font-family:'Arial',sans-serif;color:#999;text-align:center;}
+footer a{color:#555}
 .ir{background-color:transparent;border:0;overflow:hidden;*text-indent:-9999px}
 .ir:before{content:"";display:block;width:0;height:100%}
 .hidden{display:none !important;visibility:hidden}
