--- a/css/site.styl
+++ b/css/site.styl
@@ -6,20 +6,23 @@ html
     font-family 'Snippet', sans-serif
     font-weight 300
     body
-        width 978px
-        margin-left auto
-        margin-right auto
         input
             font-family 'Snippet', sans-serif
         select
             font-family 'Snippet', sans-serif
 
 header
-    background-image url('../images/weightrace.png')
+    text-align center
+    width 100%
     height 458px
+    background: url('../images/weightrace.png');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     h1
         margin-top 0px
-        color #fff
+        color #555
         font-weight normal
         font-size 18px
         text-transform lowercase
@@ -28,8 +31,13 @@ header
             font-style normal
             font-weight bold
 section#register
+    width 978px
+    margin-left auto
+    margin-right auto
     text-align center
     h2
+        text-shadow: 0px 0px 50px #000000;
+        filter: dropshadow(color=#000000, offx=0, offy=0);
         text-align center
         color #fff
         position relative
@@ -65,6 +73,7 @@ section#register
             color #bbb
             padding 10px
         h3
+            clear both
             text-align center
             color #777
             font-size 23px
@@ -203,11 +212,12 @@ section#register
             padding 10px
         input.datepicker+span:before
             margin 0px
+            margin-left -32px
+            left -33px
+            top 8px
             padding 0px
-            display block
-            margin-top -65px
-            margin-left 385px
-            position absolute
+            display inline-block
+            position relative
             content ''
             width 32px
             height 32px
@@ -216,10 +226,11 @@ section#register
         input.datepicker+span:after
             margin 0px
             padding 0px
-            display block
-            margin-top -65px
-            margin-left 702px
-            position absolute
+            top 8px
+            left 208px
+            margin-left -32px
+            display inline-block
+            position relative
             content ''
             width 32px
             height 32px
@@ -254,13 +265,15 @@ section#register
             position relative
 section#top_losers
     background-color #eeeeee
-    margin-top -50px
+    background-image url('../images/subtle_grey.png')
+    margin-top -30px
     z-index 10
     position relative
     text-align center
     overflow hidden
     padding-bottom 30px
     h1
+        background-image url('../images/subtle_grey.png')
         padding-top 60px
         color #777
         font-size 23px
@@ -272,9 +285,12 @@ section#top_losers
         padding-right 30px
         z-index 100
     ul
+        margin-left auto
+        margin-right auto
         border-top 1px solid #aaa
         position relative
         margin-top -30px
+        display inline-block
         z-index 10
         list-style-type none
         padding 0px
@@ -284,11 +300,14 @@ section#top_losers
             margin 0px
             margin-top 30px
             padding 0px
-            margin-left 30px
-            float left
+            margin-left 15px
+            margin-right 15px
+            display inline-block
             color #999
-        li:nth-of-type(4n+1)
-            margin-left 0px
 footer
     font-size 10px
+    font-family 'Arial', sans-serif
+    color #999
     text-align center
+    a
+        color #555
