--- a/application/templates/partials/header.mustache
+++ b/application/templates/partials/header.mustache
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>WeightRace - Competitive weight loss with friends</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="viewport" content="width=device-width">
