--- a/application/templates/static/homepage.mustache
+++ b/application/templates/static/homepage.mustache
@@ -41,8 +41,8 @@
             <select name="racer{{n}}_ethnicity">
                 <option value="asian">Asian</option>
                 <option value="black">Black</option>
+                <option value="caucasian">Caucasian</option>
                 <option value="hispanic">Hispanic</option>
-                <option value="white">White</option>
             </select>
             </span>
             <label for="racer{{n}}_goal_weight">Goal weight:</label>
