Remove unrequired google fonts

--- a/application/templates/static/homepage.mustache
+++ b/application/templates/static/homepage.mustache
@@ -1,5 +1,4 @@
-<link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Snippet|Telex|Expletus+Sans:400,500|Roboto:400,300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Snippet' rel='stylesheet' type='text/css'>
 <header>
     <h1>
         <em>Weight</em>Race
