Add navigation bar

--- a/application/templates/static/homepage.mustache
+++ b/application/templates/static/homepage.mustache
@@ -5,6 +5,17 @@
     </h1>
     <img src="{{baseurl}}images/graph.png" alt="WeightRace Graph">
 </header>
+<nav>
+    <p><strong>WeightRace.net Alpha version</strong></p>
+    <form action="">
+        <p>Already have a competition but forgot your login?</p>
+        <label for="email">
+            Email:
+        </label>
+        <input type="text" name="email" value="Type your email...">
+        <input type="submit" value="Send me my login">
+    </form>
+</nav>
 <section id="register">
     <h2>
         Lose weight.<br>
