--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,18 @@ textarea{resize:vertical}
 html{background-color:#fff;font-family:'Snippet',sans-serif;font-weight:300;}
 html body input{font-family:'Snippet',sans-serif}
 html body select{font-family:'Snippet',sans-serif}
-header{text-align:center;width:100%;height:458px;background:url("../images/weightrace.png");-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;}
+header{text-align:center;width:100%;height:458px;background:url("../images/weightrace.png");-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;margin-top:50px;}
 header h1{margin-top:0;color:#555;font-weight:normal;font-size:18px;text-transform:lowercase;padding:10px;}
 header h1 em{font-style:normal;font-weight:bold}
+nav{position:fixed;top:0;width:100%;line-height:30px;height:50px;color:#ccc;font-family:'Arial',sans-serif;z-index:1000;font-size:12px;text-shadow:0 1px 1px #000;background:#2d3033;background:-moz-linear-gradient(top,#2d3033 0%,#0f0f0f 100%);background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#2d3033),color-stop(100%,#0f0f0f));background:-webkit-linear-gradient(top,#2d3033 0%,#0f0f0f 100%);background:-o-linear-gradient(top,#2d3033 0%,#0f0f0f 100%);background:-ms-linear-gradient(top,#2d3033 0%,#0f0f0f 100%);background:linear-gradient(to bottom,#2d3033 0%,#0f0f0f 100%);-webkit-box-shadow:0 0 10px 0 rgba(0,0,0,0.4);box-shadow:0 0 10px 0 rgba(0,0,0,0.4);}
+nav p{float:left;display:inline-block;line-height:50px;margin:0;margin-left:10px}
+nav form{margin-right:10px;height:50px;float:right;}
+nav form label{display:none}
+nav form input{min-height:25px;max-height:25px;width:130px;-webkit-border-radius:5px;border-radius:5px;border:1px solid #333;background-color:#333;-webkit-box-shadow:0 0 1px 1px #000,inset 0 -1px 5px 1px #000;box-shadow:0 0 1px 1px #000,inset 0 -1px 5px 1px #000;font-size:12px;font-family:'Arial',sans-serif;color:#bbb;padding:2px;display:inline-block;padding:0;margin:0;margin-left:10px;margin-top:12px;padding-left:5px;padding-right:5px}
+nav form input[type=submit]{color:#eee;display:inline-block;height:30px !important;background-color:#00a42b;border:1px solid #bbb;box-shadow:none;padding:0;margin:0;margin-left:10px}
 section#register{width:978px;margin-left:auto;margin-right:auto;text-align:center;}
-section#register h2{text-shadow:0 0 50px #000;filter:dropshadow(#000,0,0);text-align:center;color:#fff;position:relative;margin-top:-175px;line-height:40px;font-size:30px;font-weight:normal}
-section#register form label:first-child{font-size:30px;font-weight:normal;color:#fff;display:block;text-align:center}
+section#register h2{text-shadow:0 0 20px #000;text-align:center;color:#fff;position:relative;margin-top:-175px;line-height:40px;font-size:30px;font-weight:normal}
+section#register form label:first-child{text-shadow:0 0 20px #000;font-size:30px;font-weight:normal;color:#fff;display:block;text-align:center}
 section#register form input:nth-child(2){position:relative;width:370px;height:37px;-webkit-border-radius:10px;border-radius:10px;border:1px solid #fff;background:#ccc;background:-moz-linear-gradient(top,#ccc 0%,#fff 40%);background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#ccc),color-stop(40%,#fff));background:-webkit-linear-gradient(top,#ccc 0%,#fff 40%);background:-o-linear-gradient(top,#ccc 0%,#fff 40%);background:-ms-linear-gradient(top,#ccc 0%,#fff 40%);background:linear-gradient(to bottom,#ccc 0%,#fff 40%);-webkit-box-shadow:0 0 1px 1px #dcdcdc,inset 0 -1px 5px 1px #e6e6e6;box-shadow:0 0 1px 1px #dcdcdc,inset 0 -1px 5px 1px #e6e6e6;line-height:50px;font-size:25px;color:#bbb;padding:10px}
 section#register form h3{clear:both;text-align:center;color:#777;font-size:23px;font-weight:normal}
 section#register form h3:nth-of-type(2){clear:both;padding-top:20px}
