--- a/css/site.styl
+++ b/css/site.styl
@@ -20,6 +20,7 @@ header
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    margin-top 50px
     h1
         margin-top 0px
         color #555
@@ -30,14 +31,76 @@ header
         em
             font-style normal
             font-weight bold
+nav
+    position fixed
+    top 0px
+    width 100%
+    line-height 30px
+    height 50px
+    color #ccc
+    font-family 'Arial', sans-serif
+    z-index 1000
+    font-size 12px
+    text-shadow: 0px 1px 1px #000000;
+    background: #2d3033; /* Old browsers */
+    background: -moz-linear-gradient(top, #2d3033 0%, #0f0f0f 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#2d3033), color-stop(100%,#0f0f0f)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #2d3033 0%,#0f0f0f 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #2d3033 0%,#0f0f0f 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #2d3033 0%,#0f0f0f 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #2d3033 0%,#0f0f0f 100%); /* W3C */
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+    p
+        float left
+        display inline-block
+        line-height 50px
+        margin 0px
+        margin-left 10px
+    form
+        margin-right 10px
+        height 50px
+        float right
+        label
+            display none
+        input
+            min-height 25px
+            max-height 25px
+            width 130px
+            -webkit-border-radius: 5px;
+            border-radius: 5px;
+            border 1px solid #333
+            background-color #333
+            -webkit-box-shadow:  0px 0px 1px 1px rgba(0, 0, 0, 1), inset 0px -1px 5px 1px rgba(0, 0, 0, 1);
+            box-shadow:  0px 0px 1px 1px rgba(0, 0, 0, 1), inset 0px -1px 5px 1px rgba(0, 0, 0, 1);
+            font-size 12px
+            font-family 'Arial', sans-serif
+            color #bbb
+            padding 2px
+            display inline-block
+            padding 0px
+            margin 0px
+            margin-left 10px
+            margin-top 12px
+            padding-left 5px
+            padding-right 5px
+        input[type=submit]
+            color #eee
+            display inline-block
+            height 30px !important
+            background-color #00a42b
+            border 1px solid #bbb
+            box-shadow none
+            padding 0px
+            margin 0px
+            margin-left 10px
 section#register
     width 978px
     margin-left auto
     margin-right auto
     text-align center
     h2
-        text-shadow: 0px 0px 50px #000000;
-        filter: dropshadow(color=#000000, offx=0, offy=0);
+        text-shadow: 0px 0px 20px #000000;
         text-align center
         color #fff
         position relative
@@ -47,6 +110,7 @@ section#register
         font-weight normal
     form
         label:first-child
+            text-shadow: 0px 0px 20px #000000;
             font-size 30px
             font-weight normal
             color #fff
