Add jquery interaction to the page

--- a/application/templates/partials/header.mustache
+++ b/application/templates/partials/header.mustache
@@ -19,6 +19,7 @@
         <link rel="apple-touch-icon" sizes="144x144" href="{{baseurl}}images/apple-touch-icon-144x144.png">
         <link rel="stylesheet" href="{{baseurl}}css/normalize.css">
         <link rel="stylesheet" href="{{baseurl}}css/main.css">
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
         <script src="{{baseurl}}js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
