--- a/css/site.styl
+++ b/css/site.styl
@@ -256,6 +256,8 @@ section#register
         label[for=end_date]
             display none
         input.datepicker
+            position relative
+            z-index 10000
             width 170px
             height 30px
             -webkit-border-radius: 10px;
