Style view page

--- a/application/templates/race/create.mustache
+++ b/application/templates/race/create.mustache
@@ -2,6 +2,7 @@
     <h1>
         <em>Weight</em>Race
     </h1>
+    <img src="{{baseurl}}images/graph.png" alt="WeightRace Graph">
 </header>
 <nav>
     <p><strong>WeightRace.net Alpha version</strong></p>
@@ -85,9 +86,3 @@
     {{/losers}}
     </ul>
 </section>
-<footer>
-    <p>
-        Copyright &copy; 2013 WeightRace.com<br>
-        Designed and built by <a href="http://thinkmoult.com">Dion Moult</a>
-    </p>
-</footer>
