--- a/application/templates/partials/footer.mustache
+++ b/application/templates/partials/footer.mustache
@@ -1,3 +1,9 @@
+        <footer>
+            <p>
+                Copyright &copy; 2013 WeightRace.com<br>
+                Designed and built by <a href="http://thinkmoult.com">Dion Moult</a>
+            </p>
+        </footer>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="{{baseurl}}js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
         <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
