--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,8 @@ textarea{resize:vertical}
 html{background-color:#fff;font-family:'Snippet',sans-serif;font-weight:300;}
 html body input{font-family:'Snippet',sans-serif}
 html body select{font-family:'Snippet',sans-serif}
+html body a{color:#333}
+html body a:hover{color:#000}
 header{text-align:center;width:100%;height:458px;background:url("../images/weightrace.png");-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;margin-top:50px;}
 header h1{margin-top:0;color:#555;font-weight:normal;font-size:18px;text-transform:lowercase;padding:10px;}
 header h1 em{font-style:normal;font-weight:bold}
@@ -62,10 +64,45 @@ section#register form input.datepicker+span:before{margin:0;margin-left:-32px;le
 section#register form input.datepicker+span:after{margin:0;padding:0;top:8px;left:208px;margin-left:-32px;display:inline-block;position:relative;content:'';width:32px;height:32px;background-repeat:no-repeat;background-image:url("../images/calendar.png")}
 section#register form input.datepicker+span{margin:20px;color:#777;font-size:20px}
 section#register form input[type=submit]{margin-left:auto;margin-right:auto;margin-top:30px;display:block;width:390px;height:60px;color:#fff;font-size:28px;background:#25cb51;background:-moz-linear-gradient(top,#25cb51 0%,#00a42b 100%);background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#25cb51),color-stop(100%,#00a42b));background:-webkit-linear-gradient(top,#25cb51 0%,#00a42b 100%);background:-o-linear-gradient(top,#25cb51 0%,#00a42b 100%);background:-ms-linear-gradient(top,#25cb51 0%,#00a42b 100%);background:linear-gradient(to bottom,#25cb51 0%,#00a42b 100%);border:1px solid #fff;-webkit-border-radius:10px;border-radius:10px;-webkit-box-shadow:0 1px 0 5px rgba(0,0,0,0.3);box-shadow:0 1px 0 5px rgba(0,0,0,0.3);z-index:100;position:relative}
-section#top_losers{background-color:#eee;background-image:url("../images/subtle_grey.png");margin-top:-30px;z-index:10;position:relative;text-align:center;overflow:hidden;padding-bottom:30px;}
+section#top_losers{clear:both;background-color:#eee;background-image:url("../images/subtle_grey.png");margin-top:-30px;z-index:10;position:relative;text-align:center;overflow:hidden;padding-bottom:30px;}
 section#top_losers h1{background-image:url("../images/subtle_grey.png");padding-top:60px;color:#777;font-size:23px;font-weight:normal;background-color:#eee;display:inline-block;position:relative;padding-left:30px;padding-right:30px;z-index:100}
 section#top_losers ul{margin-left:auto;margin-right:auto;border-top:1px solid #aaa;position:relative;margin-top:-30px;display:inline-block;z-index:10;list-style-type:none;padding:0;}
 section#top_losers ul li{width:222px;background-color:#ccc;margin:0;margin-top:30px;padding:0;margin-left:15px;margin-right:15px;display:inline-block;color:#999}
+section#racers{width:978px;margin-left:auto;margin-right:auto;}
+section#racers ul{list-style-type:none;padding:0;}
+section#racers ul li{background-color:#eee;width:222px;margin-left:30px;float:left;}
+section#racers ul li h1{font-size:20px;margin-left:10px}
+section#racers ul li p{margin-left:10px}
+section#racers ul li:first-child{border-top:5px solid #db1900;margin-left:0}
+section#racers ul li:nth-child(2){border-top:5px solid #036f88}
+section#racers ul li:nth-child(3){border-top:5px solid #ff7f00}
+section#racers ul li:nth-child(4){border-top:5px solid #00a42b}
+section#graph{width:978px;margin-left:auto;margin-right:auto;text-align:center;}
+section#graph img{margin:20px}
+section#rules{width:978px;margin-left:auto;margin-right:auto;}
+section#rules h1{color:#444;text-shadow:0 1px 1px #000;text-align:center;font-size:20px}
+section#rules ul{padding:0;list-style-type:none;}
+section#rules ul li{float:left;width:222px;background-color:#eee;margin-left:30px;}
+section#rules ul li h2{font-size:16px;margin-left:10px;margin-right:10px}
+section#rules ul li h2:before{font-size:30px;position:absolute;color:#bbb;margin-left:-32px;margin-top:-10px}
+section#rules ul li p{font-size:12px;margin-left:10px;margin-right:10px}
+section#rules ul li:first-child{margin-left:0;}
+section#rules ul li:first-child h2:before{content:'1'}
+section#rules ul li:nth-child(2) h2:before{content:'2'}
+section#rules ul li:nth-child(3) h2:before{content:'3'}
+section#rules ul li:nth-child(4) h2:before{content:'4'}
+section#awards{clear:both;width:978px;margin-left:auto;margin-right:auto;}
+section#awards h1{color:#444;text-shadow:0 1px 1px #000;text-align:center;font-size:20px;margin-top:30px}
+section#awards ul{padding:0;list-style-type:none;}
+section#awards ul li{background-position:53px 10px;background-repeat:no-repeat;padding-top:42px;text-align:center;width:138px;float:left;margin-left:30px;}
+section#awards ul li h2{font-size:16px;margin-left:10px;margin-right:10px}
+section#awards ul li p{font-size:12px;margin-left:10px;margin-right:10px}
+section#awards ul li:first-child{margin-left:0;background-image:url("../images/attendance.png")}
+section#awards ul li:nth-child(2){background-image:url("../images/bmi.png")}
+section#awards ul li:nth-child(3){background-image:url("../images/progress.png")}
+section#awards ul li:nth-child(4){background-image:url("../images/food.png")}
+section#awards ul li:nth-child(5){background-image:url("../images/combo.png")}
+section#awards ul li:nth-child(6){background-image:url("../images/lead.png")}
 footer{font-size:10px;font-family:'Arial',sans-serif;color:#999;text-align:center;}
 footer a{color:#555}
 .ir{background-color:transparent;border:0;overflow:hidden;*text-indent:-9999px}
