--- a/css/site.styl
+++ b/css/site.styl
@@ -10,6 +10,10 @@ html
             font-family 'Snippet', sans-serif
         select
             font-family 'Snippet', sans-serif
+        a
+            color #333
+        a:hover
+            color #000
 
 header
     text-align center
@@ -342,6 +346,7 @@ section#register
             z-index 100
             position relative
 section#top_losers
+    clear both
     background-color #eeeeee
     background-image url('../images/subtle_grey.png')
     margin-top -30px
@@ -382,6 +387,126 @@ section#top_losers
             margin-right 15px
             display inline-block
             color #999
+section#racers
+    width 978px
+    margin-left auto
+    margin-right auto
+    ul
+        list-style-type none
+        padding 0px
+        li
+            background-color #eee
+            width 222px
+            margin-left 30px
+            float left
+            h1
+                font-size 20px
+                margin-left 10px
+            p
+                margin-left 10px
+        li:first-child
+            border-top 5px solid #db1900
+            margin-left 0px
+        li:nth-child(2)
+            border-top 5px solid #036f88
+        li:nth-child(3)
+            border-top 5px solid #ff7f00
+        li:nth-child(4)
+            border-top 5px solid #00a42b
+section#graph
+    width 978px
+    margin-left auto
+    margin-right auto
+    text-align center
+    img
+        margin 20px
+section#rules
+    width 978px
+    margin-left auto
+    margin-right auto
+    h1
+        color #444
+        text-shadow 0px 1px 1px #000000
+        text-align center
+        font-size 20px
+    ul
+        padding 0px
+        list-style-type none
+        li
+            float left
+            width 222px
+            background-color #eee
+            margin-left 30px
+            h2
+                font-size 16px
+                margin-left 10px
+                margin-right 10px
+            h2:before
+                font-size 30px
+                position absolute
+                color #bbb
+                margin-left -32px
+                margin-top -10px
+            p
+                font-size 12px
+                margin-left 10px
+                margin-right 10px
+        li:first-child
+            margin-left 0px
+            h2:before
+                content '1'
+        li:nth-child(2)
+            h2:before
+                content '2'
+        li:nth-child(3)
+            h2:before
+                content '3'
+        li:nth-child(4)
+            h2:before
+                content '4'
+section#awards
+    clear both
+    width 978px
+    margin-left auto
+    margin-right auto
+    h1
+        color #444
+        text-shadow 0px 1px 1px #000000
+        text-align center
+        font-size 20px
+        margin-top 30px
+    ul
+        padding 0px
+        list-style-type none
+        li
+            background-position 53px 10px
+            background-repeat no-repeat
+            padding-top 42px
+            text-align center
+            width 138px
+            float left
+            margin-left 30px
+            h2
+                font-size 16px
+                margin-left 10px
+                margin-right 10px
+            p
+                font-size 12px
+                margin-left 10px
+                margin-right 10px
+        li:first-child
+            margin-left 0px
+            background-image url('../images/attendance.png')
+        li:nth-child(2)
+            background-image url('../images/bmi.png')
+        li:nth-child(3)
+            background-image url('../images/progress.png')
+        li:nth-child(4)
+            background-image url('../images/food.png')
+        li:nth-child(5)
+            background-image url('../images/combo.png')
+        li:nth-child(6)
+            background-image url('../images/lead.png')
 footer
     font-size 10px
     font-family 'Arial', sans-serif
