--- a/application/templates/race/create.mustache
+++ b/application/templates/race/create.mustache
@@ -5,7 +5,7 @@
     <img src="{{baseurl}}images/graph.png" alt="WeightRace Graph">
 </header>
 <nav>
-    <p><strong>WeightRace.net Alpha version</strong></p>
+    <p><strong><a href="{{baseurl}}">WeightRace.net Alpha version</a></strong></p>
     <form action="">
         <p>Already have a competition but forgot your login?</p>
         <label for="email">
@@ -20,9 +20,28 @@
         Lose weight.<br>
         Compete with friends.
     </h2>
-    <form>
+    <form action="" method="post">
         <label for="competition_name">Name your challenge now:</label>
-        <input type="text" name="competition_name" value="Flabicide 2013">
+        <input type="text" name="competition_name" value="{{competition_name}}">
+        {{#has_competition_errors}}
+        <div class="error">
+            <p>
+                Uh oh! We've had some problems trying to create your competition.
+                Please make sure that:
+            </p>
+            <ul>
+                {{#competition_name_error}}
+                <li>You have named your challenge</li>
+                {{/competition_name_error}}
+                {{#competition_start_date_error}}
+                <li>Your competition start date is not in the past</li>
+                {{/competition_start_date_error}}
+                {{#competition_end_date_error}}
+                <li>Your competition end date is after the start date</li>
+                {{/competition_end_date_error}}
+            </ul>
+        </div>
+        {{/has_competition_errors}}
         <h3>
             Prepare your contestants (up to 4)
         </h3>
@@ -33,31 +52,31 @@
                 <span>{{tagline}}</span>
             </legend>
             <label for="racer{{n}}_name">Name:</label>
-            <input type="text" name="racer{{n}}_name" value="Name...">
+            <input type="text" name="racer{{n}}_name" value="{{name}}">
             <label for="racer{{n}}_weight">Current weight:</label>
-            <input type="text" name="racer{{n}}_weight" value="Weight in kg...">
+            <input type="text" name="racer{{n}}_weight" value="{{weight}}">
             <label for="racer{{n}}_height">Height:</label>
-            <input type="text" name="racer{{n}}_height" value="Height in cm...">
+            <input type="text" name="racer{{n}}_height" value="{{height}}">
             <label for="racer{{n}}_gender">Gender:</label>
             <span class="select">
             <select name="racer{{n}}_gender">
-                <option value="1">Male</option>
-                <option value="0">Female</option>
+                <option value="1" {{#is_male}}selected="selected"{{/is_male}}>Male</option>
+                <option value="0" {{#is_female}}selected="selected"{{/is_female}}>Female</option>
             </select>
             </span>
             <label for="racer{{n}}_ethnicity">Ethnicity:</label>
             <span class="select">
             <select name="racer{{n}}_ethnicity">
-                <option value="asian">Asian</option>
-                <option value="black">Black</option>
-                <option value="caucasian">Caucasian</option>
-                <option value="hispanic">Hispanic</option>
+                <option value="asian" {{#is_asian}}selected="selected"{{/is_asian}}>Asian</option>
+                <option value="black" {{#is_black}}selected="selected"{{/is_black}}>Black</option>
+                <option value="hispanic" {{#is_hispanic}}selected="selected"{{/is_hispanic}}>Hispanic</option>
+                <option value="white" {{#is_white}}selected="selected"{{/is_white}}>White</option>
             </select>
             </span>
             <label for="racer{{n}}_goal_weight">Goal weight:</label>
-            <input type="text" name="racer{{n}}_goal_weight" value="Goal weight in kg...">
+            <input type="text" name="racer{{n}}_goal_weight" value="{{goal_weight}}">
             <label for="racer{{n}}_email">Email:</label>
-            <input type="text" name="racer{{n}}_email" value="Email...">
+            <input type="text" name="racer{{n}}_email" value="{{email}}">
         </fieldset>
         {{/racers}}
         <h3>
@@ -68,6 +87,10 @@
         <span>...until...</span>
         <label for="end_date">End date:</label>
         <input class="datepicker" type="text" name="end_date" value="{{end_date}}">
+        <h3>
+            Finally, set the stakes
+        </h3>
+        <input type="text" name="stake" class="longer" value="{{stake}}">
         <input type="submit" name="submit" value="Ready. Set. Go.">
     </form>
 </section>
