--- a/css/site.styl
+++ b/css/site.styl
@@ -15,6 +15,28 @@ html
         a:hover
             color #000
 
+.error
+    margin-left auto
+    margin-right auto
+    font-family 'Arial', sans-serif
+    background-color #FFAEAE
+    font-size 12px
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    padding 10px
+    color #600
+    clear both
+    margin-top 30px
+    display block
+    width 500px
+    text-align left
+    ul
+        display inline-block
+        margin-bottom 0px
+        padding-left 20px
+    p
+        margin 0px
+
 header
     text-align center
     width 100%
@@ -35,8 +57,13 @@ header
         em
             font-style normal
             font-weight bold
+    h2
+        font-weight normal
+        font-size 20px
+        margin-top 0px
 header#view
     height 180px
+    margin-bottom 50px
     h1
         strong
             display block
@@ -52,7 +79,7 @@ nav
     height 50px
     color #ccc
     font-family 'Arial', sans-serif
-    z-index 1000
+    z-index 10000000
     font-size 12px
     text-shadow: 0px 1px 1px #000000;
     background: #2d3033; /* Old browsers */
@@ -70,6 +97,11 @@ nav
         line-height 50px
         margin 0px
         margin-left 10px
+        a
+            color #ccc
+            text-decoration none
+        a:hover
+            color #fff
     p:nth-of-type(2)
         float right
         margin-right 10px
@@ -77,39 +109,52 @@ nav
         margin-right 10px
         height 50px
         float right
-        label
-            display none
-        input
-            min-height 25px
-            max-height 25px
-            width 130px
-            -webkit-border-radius: 5px;
-            border-radius: 5px;
-            border 1px solid #333
-            background-color #333
-            -webkit-box-shadow:  0px 0px 1px 1px rgba(0, 0, 0, 1), inset 0px -1px 5px 1px rgba(0, 0, 0, 1);
-            box-shadow:  0px 0px 1px 1px rgba(0, 0, 0, 1), inset 0px -1px 5px 1px rgba(0, 0, 0, 1);
-            font-size 12px
-            font-family 'Arial', sans-serif
-            color #bbb
-            padding 2px
-            display inline-block
-            padding 0px
-            margin 0px
-            margin-left 10px
-            margin-top 12px
-            padding-left 5px
-            padding-right 5px
-        input[type=submit]
-            color #eee
-            display inline-block
-            height 30px !important
-            background-color #00a42b
-            border 1px solid #bbb
-            box-shadow none
-            padding 0px
-            margin 0px
-            margin-left 10px
+    label
+        display none
+    input
+        min-height 25px
+        max-height 25px
+        width 130px
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
+        border 1px solid #333
+        background-color #333
+        -webkit-box-shadow:  0px 0px 1px 1px rgba(0, 0, 0, 1), inset 0px -1px 5px 1px rgba(0, 0, 0, 1);
+        box-shadow:  0px 0px 1px 1px rgba(0, 0, 0, 1), inset 0px -1px 5px 1px rgba(0, 0, 0, 1);
+        font-size 12px
+        font-family 'Arial', sans-serif !important
+        color #bbb
+        display inline-block
+        padding 0px
+        margin 0px
+        margin-left 10px
+        margin-top 12px
+        padding-left 5px
+        padding-right 5px
+    input[type=submit], button
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
+        color #eee
+        display inline-block
+        height 30px !important
+        min-height 25px
+        max-height 25px
+        background-color #00a42b
+        border 1px solid #bbb
+        box-shadow none
+        padding 0px
+        margin 0px
+        padding-left 5px
+        padding-right 5px
+        margin-left 10px
+        font-size 12px
+        font-family 'Arial', sans-serif !important
+    button
+        float right
+        margin-right 10px
+        margin-left 0px
+        margin-top 13px
+        text-shadow none
 section#register
     width 978px
     margin-left auto
@@ -132,7 +177,7 @@ section#register
             color #fff
             display block
             text-align center
-        input:nth-child(2)
+        input:nth-child(2), input.longer
             position relative
             width 370px
             height 37px
@@ -152,6 +197,9 @@ section#register
             font-size 25px
             color #bbb
             padding 10px
+        input.longer
+            text-align center
+            width 978px
         h3
             clear both
             text-align center
@@ -393,6 +441,36 @@ section#racers
     width 978px
     margin-left auto
     margin-right auto
+    form
+        text-align center
+        label
+            display none
+        input
+            border none
+            background #ebebeb
+            border-bottom 1px solid #ccc
+            width 212px
+            font-size 12px
+            display block
+            padding 0px
+            padding-top 5px
+            padding-bottom 5px
+            padding-left 5px
+            padding-right 5px
+        input:nth-of-type(odd)
+            background #f0f0f0
+        button
+            background transparent
+            border 0px
+            font-size 12px
+            font-weight bold
+            height 30px
+            color #444
+            img
+                margin-right 5px
+                margin-top -2px
+        select
+            font-size 12px
     ul
         list-style-type none
         padding 0px
@@ -403,12 +481,9 @@ section#racers
             float left
             h1
                 font-size 20px
-                margin-left 10px
-            p
-                margin-left 10px
         li:first-child
             border-top 5px solid #db1900
-            margin-left 0px
+            margin-left 0px !important
         li:nth-child(2)
             border-top 5px solid #036f88
         li:nth-child(3)
@@ -417,18 +492,92 @@ section#racers
             border-top 5px solid #00a42b
 section#graph
     width 978px
+    clear both
     margin-left auto
     margin-right auto
     text-align center
-    img
-        margin 20px
+    padding-top 30px
+    padding-bottom 30px
+    div
+        clear both
+        margin-left auto
+        margin-right auto
+section#update
+    width 978px
+    margin-left auto
+    margin-right auto
+    text-align center
+    h1
+        color #444
+        text-align center
+        font-size 24px
+    label
+        display block
+    input:first-of-type
+        text-align center
+        margin-bottom 20px
+        width 222px
+        height 37px
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        border 1px solid #fff
+        background: #cccccc; /* Old browsers */
+        background: -moz-linear-gradient(top,  #cccccc 0%, #ffffff 40%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cccccc), color-stop(40%,#ffffff)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top,  #cccccc 0%,#ffffff 40%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top,  #cccccc 0%,#ffffff 40%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(top,  #cccccc 0%,#ffffff 40%); /* IE10+ */
+        background: linear-gradient(to bottom,  #cccccc 0%,#ffffff 40%); /* W3C */
+        -webkit-box-shadow:  0px 0px 1px 1px rgba(220, 220, 220, 1), inset 0px -1px 5px 1px rgba(230, 230, 230, 1);
+        box-shadow:  0px 0px 1px 1px rgba(220, 220, 220, 1), inset 0px -1px 5px 1px rgba(230, 230, 230, 1);
+        line-height 50px
+        font-size 25px
+        color #bbb
+        padding 10px
+    textarea:first-of-type
+        width 390px
+        margin-bottom 20px
+        height 150px
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        border 1px solid #fff
+        background-color #eee
+        -webkit-box-shadow:  0px 0px 1px 1px rgba(220, 220, 220, 1), inset 0px -1px 5px 1px rgba(230, 230, 230, 1);
+        box-shadow:  0px 0px 1px 1px rgba(220, 220, 220, 1), inset 0px -1px 5px 1px rgba(230, 230, 230, 1);
+        font-size 14px
+        color #bbb
+        padding 10px
+    input[type=submit]
+        display block
+        margin-left auto
+        margin-right auto
+        margin-top 20px
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
+        color #eee
+        padding 0px
+        padding 10px
+        margin-bottom 30px
+        font-size 16px
+        font-size 28px
+        background: #25cb51; /* Old browsers */
+        background: -moz-linear-gradient(top,  #25cb51 0%, #00a42b 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#25cb51), color-stop(100%,#00a42b)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top,  #25cb51 0%,#00a42b 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top,  #25cb51 0%,#00a42b 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(top,  #25cb51 0%,#00a42b 100%); /* IE10+ */
+        background: linear-gradient(to bottom,  #25cb51 0%,#00a42b 100%); /* W3C */
+        border 1px solid #fff
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        -webkit-box-shadow:  0px 01px 0px 5px rgba(0, 0, 0, .3);
+        box-shadow:  0px 01px 0px 5px rgba(0, 0, 0, .3);
 section#rules
     width 978px
     margin-left auto
     margin-right auto
     h1
         color #444
-        text-shadow 0px 1px 1px #000000
         text-align center
         font-size 20px
     ul
@@ -473,10 +622,9 @@ section#awards
     margin-right auto
     h1
         color #444
-        text-shadow 0px 1px 1px #000000
         text-align center
         font-size 20px
-        margin-top 30px
+        padding-top 30px
     ul
         padding 0px
         list-style-type none
