--- a/application/templates/race/view.mustache
+++ b/application/templates/race/view.mustache
@@ -145,7 +145,7 @@ google.setOnLoadCallback(drawVisualization);
                 The finish line
             </h2>
             <p>
-                You have 40 days until the competition finishes to achieve your weight goal and flaunt as many wobbly bits as you can.
+            You have {{days_left}} days until the competition finishes to achieve your weight goal and flaunt as many wobbly bits as you can.
             </p>
         </li>
         <li>
