--- a/application/templates/race/create.mustache
+++ b/application/templates/race/create.mustache
@@ -6,7 +6,7 @@
 </header>
 <nav>
     <p><strong><a href="{{baseurl}}">WeightRace.net Alpha version</a></strong></p>
-    <form action="">
+    <form action="" method="post">
         <p>Already have a competition but forgot your login?</p>
         <label for="email">
             Email:
