--- a/application/templates/race/view.mustache
+++ b/application/templates/race/view.mustache
@@ -47,7 +47,7 @@ google.setOnLoadCallback(drawVisualization);
     <p>Hello, <strong>{{auth_name}}</strong></p>
 </nav>
 {{#has_errors}}
-<div class="error">
+<div class="notification error">
     <p>
         Uh oh! We've encountered the following problems when updating your
         competition status:
