--- a/css/site.styl
+++ b/css/site.styl
@@ -15,16 +15,14 @@ html
         a:hover
             color #000
 
-.error
+.notification
     margin-left auto
     margin-right auto
     font-family 'Arial', sans-serif
-    background-color #FFAEAE
     font-size 12px
     -webkit-border-radius: 5px;
     border-radius: 5px;
     padding 10px
-    color #600
     clear both
     margin-top 30px
     display block
@@ -36,6 +34,14 @@ html
         padding-left 20px
     p
         margin 0px
+
+.error
+    background-color #FFAEAE
+    color #600
+
+.success
+    background-color #BEFF77
+    color #426B16
 
 header
     text-align center
