--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,11 @@ html body input{font-family:'Snippet',sans-serif}
 html body select{font-family:'Snippet',sans-serif}
 html body a{color:#333}
 html body a:hover{color:#000}
-.error{margin-left:auto;margin-right:auto;font-family:'Arial',sans-serif;background-color:#ffaeae;font-size:12px;-webkit-border-radius:5px;border-radius:5px;padding:10px;color:#600;clear:both;margin-top:30px;display:block;width:500px;text-align:left;}
-.error ul{display:inline-block;margin-bottom:0;padding-left:20px}
-.error p{margin:0}
+.notification{margin-left:auto;margin-right:auto;font-family:'Arial',sans-serif;font-size:12px;-webkit-border-radius:5px;border-radius:5px;padding:10px;clear:both;margin-top:30px;display:block;width:500px;text-align:left;}
+.notification ul{display:inline-block;margin-bottom:0;padding-left:20px}
+.notification p{margin:0}
+.error{background-color:#ffaeae;color:#600}
+.success{background-color:#beff77;color:#426b16}
 header{text-align:center;width:100%;height:458px;background:url("../images/weightrace.png");-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;margin-top:50px;}
 header h1{margin-top:0;color:#555;font-weight:normal;font-size:18px;text-transform:lowercase;padding:10px;}
 header h1 em{font-style:normal;font-weight:bold}
