--- a/application/templates/race/view.mustache
+++ b/application/templates/race/view.mustache
@@ -161,7 +161,7 @@ google.setOnLoadCallback(drawVisualization);
                 The cheese
             </h2>
             <p>
-                Each time you update, you are eligible to earn a number of trophies and awards, each worth a certain amount of wobbly bits.
+                Each time you update, you are eligible to earn a number of trophies and awards, each worth a certain number of wobbly bits.
             </p>
         </li>
         <li>
