Talk about new trophy

--- a/application/templates/race/view.mustache
+++ b/application/templates/race/view.mustache
@@ -207,7 +207,7 @@ google.setOnLoadCallback(drawVisualization);
         <li>
             <h2>The Flab Pack Leader</h2>
             <p><strong>2</strong> wobbly bits</p>
-            <p>Awarded when you are in first place.</p>
+            <p>Awarded when you are equal or ahead of your goal trajectory.</p>
         </li>
     </ul>
 </section>
