--- a/application/templates/view/display.mustache
+++ b/application/templates/view/display.mustache
@@ -104,7 +104,7 @@ google.setOnLoadCallback(drawVisualization);
                     <input type="text" name="racer{{n}}_goal_weight" value="{{goal_weight}}">
                     <label for="racer{{n}}_email">Email:</label>
                     <input type="text" name="racer{{n}}_email" value="{{email}}">
-                    <button type="submit"><img src="{{baseurl}}images/add.png" alt="Plus icon">Add contestant</button>
+                    <input type="submit" name="submit" value="Add contestant">
                 </fieldset>
             </li>
             {{/potential_contestants}}
