--- a/css/site.styl
+++ b/css/site.styl
@@ -465,16 +465,16 @@ section#racers
             padding-right 5px
         input:nth-of-type(odd)
             background #f0f0f0
-        button
+        input[type=submit]
             background transparent
             border 0px
             font-size 12px
             font-weight bold
             height 30px
             color #444
-            img
-                margin-right 5px
-                margin-top -2px
+            background-image url('../images/add.png')
+            background-repeat no-repeat
+            background-position 40px 7px
         select
             font-size 12px
     ul
